--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
 			<version>v3-rev305-1.23.0</version>
 		</dependency>
 		
+			<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
