--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,12 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/dap_msa
+# TODO je t'ai ajouter des paramètre poour éviter des problems avec certaisnversion du driver MySQL/server MySQL : useLegacyDatetimeCode=false&serverTimezone=Europe/Paris ( https://stackoverflow.com/questions/7605953/how-to-change-mysql-timezone-in-a-database-connection-using-java)
+spring.datasource.url = jdbc:mysql://localhost:3306/dap_msa?useLegacyDatetimeCode=false&serverTimezone=Europe/Paris
 
 # Username and password
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.username = dapMsa
+spring.datasource.password = dapMsa
 
 # ===============================
 # = JPA / HIBERNATE
